fixed navbar spacing between components

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -9,7 +9,7 @@
 .Footer {
     height: 380px;
     max-width: 1350px;
-    padding: 17px 0 0 35px;
+    padding: 17px 60px 0 60px;
     margin: 0 auto;
 
     background: #1B1818;
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: column;
     text-align: left;
-    width: 341px;
+    width: 500px;
 }
 
 .FooterLogoName {
@@ -79,7 +79,7 @@
     margin-top: 30px;
     flex: 1;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     font-size: 18px;
     color: white;
     text-align: left;
@@ -91,10 +91,6 @@
 
 .HelpSection {
     width: 105px;
-}
-
-.CompanySection {
-    margin-right: 100px;
 }
 
 .ProductTitle, .HelpTitle, .CompanyTitle {
